--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vuepress-theme-reco-demo",
-  "version": "2.0.0",
-  "description": "Demo for vuepress-theme-reco@2.x.",
-  "repository": "git@github.com:recoluan/vuepress-theme-reco-demo.git",
-  "author": "reco_luan <recoluan@outlook.com>",
+  "name": "powerphone-website",
+  "version": "1.0.0",
+  "description": "Website for MobiCom 2023 Paper PowerPhone",
+  "repository": "git@github.com:PowerPhone/PowerPhone-VuePress.git",
+  "author": "SHIRUICAO <charlescao@csr460.com>",
   "license": "MIT",
   "scripts": {
     "dev": "vuepress dev .",
