--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "vuepress": "2.0.0-beta.66",
     "vuepress-theme-reco": "2.0.0-beta.67"
+  },
+  "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.66"
   }
 }
